@@ -1,3 +1,9 @@
+2010-08-30  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* lib/Foomatic/DB.pm: Do not die if the C helper programs
+	  foomatic-combo-xml and foomatic-perl-data fail. Simply return
+	  undef so that the caller can handle the error.
+
 2010-08-26  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* foomatic-ppdfile.in: Fixed bug that made the PPD URI
